--- a/Project-Event_Manager/form_letter.erb
+++ b/Project-Event_Manager/form_letter.erb
@@ -5,6 +5,10 @@
 </head>
 <body>
   <h1>Thanks <%= name %></h1>
+  <% unless telephone == "invalid" %>
+  <h3>Contact Number: <%= telephone %></h3>
+  <% end %>
+  
   <p>Thanks for coming to our conference.  We couldn't have done it without you!</p>
 
   <p>
